# game-sql-warden

./: .env  .gitignore  02_instructions.md  Cargo.toml  README.md  content.yaml
.cargo/: config.toml
challenges/01_strongest_cubical/: 00_name.txt  01_lore.md  02_instructions.md  04_test.sql  solution_correlated_subquery.sql  solution_join_on_aggregate_cte.sql  solution_window.sql
challenges/02_sql_topk/: 00_name.txt  01_lore.md  02_instructions.md  03_migration.sql  04_test.sql  solution.sql
challenges/03_conditional_logic/: 00_name.txt  02_instructions.md  03_migration.sql  04_test.sql  lore.md  solution.sql  solution_sample.sql
challenges/04_joinacalypse_now/: 00_name.txt  01_lore.md  02_instructions.md  03_migration.sql  04_test.sql  solution_sample.sql
challenges/05_window_wizards_trial/: 00_name.txt  01_lore.md  02_instructions.md  03_migration.sql  04_test.sql  name  solution_sample.sql
challenges/06_group_by_or_die/: 00_name.txt  01_lore.md  02_instructions.md  03_migration.sql  04_test.sql
music/: glitch13-8bit.it
sql/: migrate.sql
src/: api.rs  app.rs  chip_tuner.rs  evaluation.rs  main.rs  presenter.rs  tui.rs  tui_loop.rs
src/game/: game_state.rs  mod.rs  stage.rs
src/views/: challenge_keybinds.rs  challenge_view.rs  game_over.rs  map_keybinds.rs  map_view.rs  mod.rs  no_stage_keybinds.rs  no_stage_view.rs  popup_keybinds.rs  title_keybinds.rs  title_view.rs
wasm-loader/: .gitignore  README.md  client-code.js  eslint.config.js  index.html  load.html  main.js  package.json  pnpm-lock.yaml  vite.config.js
wasm-loader/lib/: main.js
(+2 files in other folders)
