[package]
name = "sql-warden"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
fern = "0.7.1"
log = "0.4.28"
notify = "8.2.0"
ratatui = "0.29.0"
tempfile = "3.23.0"
thiserror = "1.0"
tui-markdown = "0.3.6"

[dependencies.rusqlite]
features = ["bundled", "wasm32-wasi-vfs"]
version = "0.29.0"

