[package]
name = "sql-warden"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
fern = "0.7.1"
glob = "0.3.3"
log = "0.4.28"
mod_player = "0.1.4"
notify = "8.2.0"
openmpt = "0.3.1"
ratatui = "0.29.0"
rodio = "0.21.1"
tempfile = "3.23.0"
thiserror = "1.0"
tui-markdown = "0.3.6"

[dependencies.rusqlite]
features = ["bundled", "wasm32-wasi-vfs"]
version = "0.29.0"

